modal donation for screen

--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
       </div>
     </nav>
 
+    <div id="modal-donation-screen">
+      <div id="modal-front-screen">
+        <div id="icons-modal-screen">
+          <div id="close-icon-screen">
+            <i  class="fas fa-times fa-lg" onclick="closeModalDonation()"></i>
+          </div>
+          <div id="triangle-icon-screen">
+            <i class="fas fa-exclamation-triangle fa-5x"></i>
+          </div>
+        </div>
+        <h1>DONTAIONS IS NOT AVAILABLE AT THE MOMENT</h1>
+      </div>
+    </div>
+
     <!-- nav mobile -->
     <nav class="nav-mobile">
       <div class="nav-mobile-wrapper">
