--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="">Contact</a>
         </div>
         <div class="nav-button">
-          <button>Donate Today</button>
+          <button onclick="openModalDonationScreen()">Donate Today</button>
         </div>
       </div>
     </nav>
@@ -51,7 +51,7 @@
       <div id="modal-front-screen">
         <div id="icons-modal-screen">
           <div id="close-icon-screen">
-            <i  class="fas fa-times fa-lg" onclick="closeModalDonation()"></i>
+            <i  class="fas fa-times fa-lg" onclick="closeModalDonationScreen()"></i>
           </div>
           <div id="triangle-icon-screen">
             <i class="fas fa-exclamation-triangle fa-5x"></i>
